# CommLite

./: .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README-EN.md  README.md  appveyor.yml  cmake_build.bat  cmake_build.sh  cmake_build_aarch64.sh  cmake_build_arm.sh  cmake_build_mips64el.sh  cmake_build_sw_64.sh  cmake_build_x86.bat  compile-MinGW.bat  compile.sh  ttyPermission.sh
.github/ISSUE_TEMPLATE/: bug--.md  bug_report.md
cmake/: commliteCPack.cmake  toolchain_sw_64.cmake
src/: CommLite.cpp  tui.cpp  tui.h
